[Header] fix firefox baseline alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -68,14 +68,20 @@
   padding: 0 12px;
   }
 
-  .Header--ios.Header--mode-primary .Header__content {
-    font-size: 17px;
-    line-height: 22px;
+  .Header--ios.Header--mode-primary .Header__main {
     padding: 13px 0 9px;
     }
 
-  .Header--ios.Header--mode-secondary .Header__content {
+  .Header--ios.Header--mode-primary .Header__content {
+    font-size: 17px;
+    line-height: 22px;
+    }
+
+  .Header--ios.Header--mode-secondary .Header__main {
     padding: 14px 0 10px;
+    }
+
+  .Header--ios.Header--mode-secondary .Header__content {
     font-size: 13px;
     line-height: 16px;
     }
@@ -85,16 +91,24 @@
   padding: 0 16px;
   }
 
+  .Header--android.Header--mode-primary .Header__main,
+  .Header--vkcom.Header--mode-primary .Header__main {
+    padding: 15px 0 9px;
+    }
+
   .Header--android.Header--mode-primary .Header__content,
   .Header--vkcom.Header--mode-primary .Header__content {
-    padding: 15px 0 9px;
     font-size: 16px;
     line-height: 20px;
     }
 
+  .Header--android.Header--mode-secondary .Header__main,
+  .Header--vkcom.Header--mode-secondary .Header__main {
+    padding: 15px 0 9px;
+    }
+
   .Header--android.Header--mode-secondary .Header__content,
   .Header--vkcom.Header--mode-secondary .Header__content {
-    padding: 15px 0 9px;
     font-size: 13px;
     line-height: 16px;
     }
